force-app/main/default/objects/Test_Oppo_related__c/Test_Oppo_related__c.object-meta.xml
<CustomObject>
    <label>Test_Oppo_related</label>
    <nameField>
        <label>Test_Oppo_related Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test_Oppos_related</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>