force-app/main/default/objects/Test_Oppo_related__c/fields/Alignment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Alignment_Effective_Date__c</fullName>
    <label>Alignment Effective Date</label>
    <type>Date</type>
</CustomField>