force-app/main/default/objects/Test_Oppo_related__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Test_Oppos_related</relationshipLabel>
    <relationshipName>Test_Oppos_related</relationshipName>
    <type>Lookup</type>
</CustomField>