force-app/main/default/objects/Test_Oppo_related__c/fields/Rebate_Eligibility_Field__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Eligibility_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate Eligibility Field</label>
    <type>Checkbox</type>
</CustomField>