force-app/main/default/objects/Test_Oppo_related__c/fields/Rebate_Eligibility_Start__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Eligibility_Start__c</fullName>
    <label>Rebate Eligibility Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Immediately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>