force-app/main/default/objects/Test_Oppo_related__c/fields/Rebate_Eligibility_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Eligibility_Start_Date__c</fullName>
    <label>Rebate Eligibility Start Date</label>
    <type>Date</type>
</CustomField>